# Stablecoin-Stability-Tracker

./: .gitignore  CMakeLists.txt  README.md
StablecoinStabilityTracker/tests/: test_data_normalizer.cpp  test_main.cpp
include/alerting/: alerting_headers.hpp  notification_dispatcher.hpp  threshold_watcher.hpp
include/analytics/: historical_pattern_engine.hpp  onchain_flow_analyzer.hpp  pattern_engine.h  pattern_matcher.hpp
include/core/: config.hpp  config_manager.hpp  thread_pool.hpp  types.hpp
include/data/: api_client.hpp  coingecko_client.hpp  data_normalizer.hpp  defi_client.hpp  etherscan_client.hpp  historical_pattern_engine.hpp  model_interface.hpp  notification_dispatcher.hpp  onchain_flow_analyzer.hpp  prediction_engine.hpp  risk_scorer.hpp  sentiment_client.hpp  threshold_watcher.hpp  websocket_handler.hpp
include/monitoring/: alert_router.h
include/prediction_engine/: model_interface.hpp  risk_scorer.hpp
include/utils/: json_parser.hpp  logger.hpp  perf_logger.hpp  time_series.hpp
src/: main.cpp
src/alerting/: notification_dispatcher.cpp  threshold_watcher.cpp
src/analytics/: historical_pattern_engine.cpp  onchain_flow_analyzer.cpp  pattern_engine.cpp  pattern_matcher.cpp
src/core/: config.cpp  config_manager.cpp  thread_pool.cpp
src/data_ingestion/: api_client.cpp  coingecko_client.cpp  data_normalizer.cpp  defi_client.cpp  etherscan_client.cpp  sentiment_client.cpp  websocket_handler.cpp
src/monitoring/: alert_router.cpp
src/prediction_engine/: model_interface.cpp  risk_scorer.cpp
src/utils/: perf_logger.cpp
tests/: test_pattern_engine.cpp  test_risk_scorer.cpp  test_summary_parser.cpp
